--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,5 @@
 
 :root {
-    --black: rgb(0, 0, 0);
-    --fondo:  #FFFFFF;
     --contenedor: #660708;
     --hoover: #004E89;
     --respuestaA: #0B090A;
@@ -16,8 +14,12 @@ body{
     flex-direction: column;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
-    background-color: var(--fondo)
+    background-image: url("../assets/img/texturaFondo.jpg");
+    background-attachment: fixed;
+    color: #FFFFFF;
+    object-fit: cover;
+    width:100%;
+    height:100%;
 }
 
 .formularioQuiz{
@@ -26,24 +28,32 @@ body{
     margin-right: auto;
     margin-top: 10px;
     border-radius: 15px;
-    background-color: var(--contenedor);
+    background-color: rgba(102, 7, 8, .8);
+    padding-top: 15px;
 }
 
 .contenedorPregunta{
+    width: 95%;
+    margin: auto;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 95vh;
     margin-bottom: 50px;
-    background-color: var(--contenedor);
+    background-color: rgba(40, 9, 9, 0.9);
+    padding-top: 20px;
+    border-radius: 15px;
 
 }
 
 .pregunta{
     width: 97%;
     font-size: 1.5em;
-    background-color: var(--fondo);
+    background-color: var(--respuestac);
     color: white;
     font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    box-shadow: 10px 10px 5px 0px rgba(255,255,255, .3);
 }
 
 label{
@@ -84,3 +94,24 @@ label:hover {
     background-color: red;
     box-shadow: 10px 10px 5px 0px rgba(255,255,255,1);
 }
+
+#fotoDonGenaro{
+    background-image: url(../assets/img/abueloRefranes.jpg);
+    object-fit: cover;
+    width:95%;
+    margin:auto;
+    border-radius: 20px;
+    text-align: left;
+    
+}
+
+#cita{
+    width: 30%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-left: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    
+}
+
